--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -563,6 +563,10 @@ SSA-формы используются в инфраструктурах ком
 
 \section{Методы оптимизации рекурсии}\label{sec:ch1/sec7}
 
+\subsection{Устранение хвостовой рекурсии}\label{sec:ch1/sec7/subsec1}
+
+\subsection{Мемоизация рекурсивных функций}\label{sec:ch1/sec7/subsec2}
+
 \section{Обзор связанных программных средств}\label{sec:ch1/sec8}
 
 \subsection{Enso}\label{sec:ch1/sec8/subsec1}
