--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -285,3 +285,73 @@ doi = {10.1145/1283920.1283933}
   edition   = {},
   volume    = {}
 }
+
+@online{scala,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://github.com/elliottlawrence/flo},
+  urldate = {05.06.2021},
+  language = {english}
+}
+
+@online{svelte,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://github.com/elliottlawrence/flo},
+  urldate = {05.06.2021},
+  language = {english}
+}
+
+@online{jetty,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://github.com/elliottlawrence/flo},
+  urldate = {05.06.2021},
+  language = {english}
+}
+
+@online{scalatra,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://github.com/elliottlawrence/flo},
+  urldate = {05.06.2021},
+  language = {english}
+}
+
+@book{gof,
+  title     = {Кормен},
+  author    = {},
+  publisher = {MIT Press},
+  year      = {},
+  series    = {},
+  edition   = {},
+  volume    = {}
+}
+
+@online{specialcase,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://martinfowler.com/eaaCatalog/specialCase.html},
+  urldate = {05.06.2021},
+  language = {english}
+}
+
+@online{cakepattern,
+  title={Flo},
+  journal={Framer},
+  year={2021},
+  medium={Электронный ресурс},
+  url = {https://github.com/davidmoten/cake-pattern},
+  urldate = {05.06.2021},
+  language = {english}
+}
