--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -565,7 +565,65 @@ SSA-формы используются в инфраструктурах ком
 
 \subsection{Устранение хвостовой рекурсии}\label{sec:ch1/sec7/subsec1}
 
+Случай, когда рекурсивный вызов является последней операцией перед
+вызовом из функции, имеет название \textbf{хвостовой рекурсии}.
+В таком случае нет необходимости вызывать процедуру стандартным образом
+--- сохранять контекст исполнения (локальные переменные, адрес возврата)
+на стеке, так как параметры не будут использованы, а адрес возврата
+уже находится на стеке. Тогда можно подставить передаваемые параметры
+вместо локальных аргументов функции, и вместо вызова перейти на начало
+процедуры при помощи инструкции перехода. Рекурсивный вычислительный
+процесс с ростом стека вызовов будет заменен на простую итерацию.
+Оптимизация такого рода имеет название \textbf{<<устранение хвостовой
+рекурсии>>} \cite[с.~508]{sicp}.
+
+Спецификация языка программирования Scheme, поддерживающего
+хвостовую рекурсию, содержит ряд уточнений, в каких случаях рекурсивный
+вызов является хвостовым \cite[с.~59]{r6rs}.
+
+Для нас большую роль играет тот факт, что если возвращаемое
+выражение функции --- операция ветвления, то рекурсивный вызов,
+являющийся листом дерева условных выражений
+(одна или обе ветви условного выражения также могут быть условным
+выражением, для построения корректного выражения требуется
+подстановка в условное выражение какого-то терминального значения),
+является хвостовым.
+
 \subsection{Мемоизация рекурсивных функций}\label{sec:ch1/sec7/subsec2}
+
+По определению, чистые функции при заданных входных данных всегда
+возвращают один ответ, следовательно, мы могли бы запоминать
+результаты особо затратных по вычислению функций, при заданных
+параметрах, и при обращении возвращать непосредственно сам результат.
+
+Такая техника оптимизации программ имеет название \textbf{мемоизации}.
+
+Оптимизаторы функциональных языков широко поддерживают автоматическую
+мемоизацию функций, реализуемую с помощью специальных структур данных,
+называемых \textbf{мемо-таблицами}. Мемо-таблица в общем случае
+является ассоциативным массивом, переводящим кортежи элементов,
+соответствующих параметрам функций, в некоторое значение \cite[с.~539]{fp93}.
+
+Имеет смысл мемоизировать вычисление рекурсивных функций некоторого класса,
+такого как рекурсия по дереву, к которому, например, относится функция
+Фибоначчи, определяемая как $F_0 = 0,\quad F_1 = 1,\quad F_n = F_{n-1} + F_{n-2}$ при $n \ge 2$.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.75] {fib_memo}
+	\caption{Мемоизируемое вычисление $F_5$}
+	\label{fig:fib_memo}
+\end{figure}
+\FloatBarrier
+
+На рисунке \ref{fig:fib_memo} белым цветом обозначено непосредственное вычисление
+значений $F$ с запоминанием, а серым --- получение значений из мемо-таблиц.
+Вычислительная сложность на первом запуске сократилась с зачения,
+сопоставимого с $O(F_n)$, до $O(n)$, тем самым приблизившись к сложности итеративного алгоритма
+вычисления функции Фибоначчи. Однако мемоизируемая версия требует $O(n)$ памяти под мемо-таблицы,
+когда итеративный алгоритм использует $O(1)$ памяти. В общем случае мемоизация незавершимых
+или медленно сходящихся рекурсивных функций может вызвать неконтроллируемую утечку памяти;
+поэтому данной оптимизацией следует пользоваться с осторожностью.
 
 \section{Обзор связанных программных средств}\label{sec:ch1/sec8}
 
