--- a/Dissertation/conclusion.tex
+++ b/Dissertation/conclusion.tex
@@ -6,20 +6,43 @@
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 %% Поэтому имеет смысл сделать эту часть общей и загрузить из одного файла в автореферат и в диссертацию:
 
-В результате самостоятельной работы студента в семестре и преддипломной практики были решены следующие задачи:
+В процессе работы была подробна исследована предметная область задачи.
+Были рассмотрены основные идеи визуального программирования, изучены
+основания и концепции функционального программирования; рассмотрен
+современный подход к построению компиляторов, в том числе, виды промежуточных
+представлений программы, методы оптимизации рекурсивных программ компиляторами.
+Был проведен обзор популярных визуальных средств программирования и 
+прототипирования приложений.
 
-\begin{enumerate}
-    \item Рассмотрены технологии, алгоритмы, методы предметной области, формализованы в отдельной главе пояснительной записки выпускной квалификационной работы.
-    \item Разработан проект визуального языка программирования, поддерживающего функциональную парадигму.
-    \item Построена клиент-серверная архитектура среды разработки на спроектированном языке с поддержкой компиляции программы в целевой код на языке JavaScript.
-    \item Спроектирован интерфейс интегрированной среды программирования, разработан функциональный прототип среды с использованием технологии HTML5.
-    \item Формализованы методы оптимизации рекурсии в программах на спроектированном языке программирования.
-\end{enumerate}
+На основе изученных концепций был спроектирован визуальный
+язык функционального программирования, основанный на понятии
+чистых функций, и поддерживающий такие элементы функциональной парадигмы,
+как функции высшего порядка и отложенные вычисления.
 
-В ближайшее время планируется:
+Для разработки программ на спроектированном языке была предложена концепция
+интегрированной среды программирования, основанной на архитектурном шаблоне
+построения интерактивных функциональных приложений.
 
-\begin{enumerate}
-    \item Интегрировать среду программирования и компилятор в единую программную систему.
-    \item Провести полномасштабное тестирование функционального прототипа системы.
-    \item Зафиксировать соответствующую информацию в пояснительной записке к выпускной квалификационной работе студента.
-\end{enumerate}
+Результатом работы стала система визуального функционального программирования,
+включающая:
+
+\begin{itemize}
+    \item среду программирования на спроектированном языке;
+    \item оптимизирующий транслятор в JavaScript-код, поддерживающий 
+    такие оптимизации, как устранение хвостовой рекурсии,
+    мемоизация вычислений рекурсивных функций.
+\end{itemize}
+
+Среда и транслятор связаны между собой отношением <<клиент-сервер>> в
+одноименной архитектуре.
+
+В будущем планируется продолжить исследование данной темы с целью:
+
+\begin{itemize}
+    \item выявления других способов оптимизации рекурсии компиляторами;
+    \item введения в язык строгой семантики типов, подобной имеющимся в
+    языках семейства ML.
+\end{itemize}
+
+Тезисы о проектировании системы опубликованы в материалах Всероссийской
+научно-технической конференции <<Наука и молодежь -- 2021>>.
