--- a/Dissertation/part2.tex
+++ b/Dissertation/part2.tex
@@ -137,6 +137,56 @@ Flovver --- аппликативный язык, то есть, вычислит
 
 \section{Проектирование общей архитектуры приложения}\label{sec:ch2/sec2}
 
+Рассмотрим общую архитектуру приложения, изображенную на рисунке \ref{fig:common_arch}.
+
+Архитектура включает одно лицо --- пользователя (прикладного программиста),
+и три компонента: компилятор, языковой сервер и среду разработки.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.8] {common_arch}
+	\caption{Общая архитектура разрабатываемого программного обеспечения}
+	\label{fig:common_arch}
+\end{figure}
+\FloatBarrier
+
+Пользователь имеет возможность формировать программы в интерактивном режиме
+с помощью среды программирования, в том числе --- компилировать и запускать
+получившееся приложение. Кроме этого, пользователь может собрать программу
+из имеющихся данных вручную -- с помощью интерфейса командной строки
+компилятора. Процесс работы пользователя с системой программирования во времени
+показан на диаграмме последовательности на рисунке \ref{fig:arch-sequence}.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.5] {arch-sequence}
+	\caption{Диаграмма последовательности работы пользователя с системой}
+	\label{fig:arch-sequence}
+\end{figure}
+\FloatBarrier
+
+Из рисунка \ref{fig:common_arch} имеем зависимость между средой программирования
+и компилятором. Зависимость не может быть прямой, так как компоненты системы
+в общем случае не связаны между собой, и могут быть реализованы с использованием
+совершенно разного набора технологий. Для связи среды и компилятора введен
+компонент <<языковой сервер>>, являющийся шлюзом для сообщений, поступающих от
+среды, и требующих выполнения в компиляторе. Было решено построить шлюз как
+REST API, доступ к которому осуществляется по протоколу HTTP.
+
+Интерфейс имеет следующие доступные по HTTP маршруты:
+
+\begin{itemize}
+	\item \textbf{/api/compile} (метод GET) --- вызывает сборку проекта в директории с работающим сервером;
+	\item \textbf{/api/load} (метод GET) --- передает просящему конфигурацию проекта в формате JSON;
+	\item \textbf{/api/save} (метод POST) --- сохраняет переданные в теле запроса данные в формате JSON как конфигурацию проекта.
+\end{itemize}
+
+Кроме вышеперечисленных, имеются маршруты общего назначения:
+\begin{itemize}
+	\item \textbf{/} (метод GET) --- корневой маршрут, по которому доступен сеанс работы в интегрированной среде;
+	\item \textbf{/preview} (метод GET) --- маршрут, по которому доступна последняя собранная версия текущего проекта.
+\end{itemize}
+
 \section{Проектирование вариантов использования приложения}\label{sec:ch2/sec3}
 
 Были написаны возможные сценарии действий пользователей.
